--- a/app/templates/b.html
+++ b/app/templates/b.html
@@ -21,7 +21,7 @@
 				<h3>Task 1b</h3>
 			</div>
 			<div class="col-6">
-				<button class="btn btn-light float-right">
+				<button id = "stopbutton" class="btn btn-light float-right">
 					Stop
 				</button>
 			</div>
@@ -41,6 +41,18 @@
 <script type="text/javascript">
 
 	// your solution here
+  
+ $(document).ready(() =>{
+   function addballon () {
+     $(".shape-container").append( '<div class = "p2-circle bg-blue" > </div>');
+   }
+   a = setInterval(addballon,1000);
+   $('#stopbutton').click(function (){
+      clearInterval(a);
+   });
+   
+  
+  });
 
 </script>
 </body>
