--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -44,8 +44,8 @@
 					<div class="p2-circle bg-yellow"></div>
 					<div class="p2-circle bg-yellow"></div>
 					<div class="p2-circle bg-yellow"></div>
-					<div id = "orangeborder1" class="p2-circle bg-orange p2-border"></div>
-					<div id = "orangeborder2" class="p2-circle bg-orange p2-border"></div>
+					<div class="p2-circle bg-orange p2-border"></div>
+					<div class="p2-circle bg-orange p2-border"></div>
 					<div class="p2-circle bg-orange"></div>
 					<div class="p2-circle bg-orange"></div>
 					<div class="p2-circle bg-orange"></div>
@@ -71,8 +71,8 @@
      $( ".bg-green").click(function() {
            $( ".bg-green,.bg-blue" ).hide();
         });
-    $( "#orangeborder1,#orangeborder2").click(function() {
-           $( "#orangeborder1,#orangeborder2").hide();
+    $( ".bg-orange.p2-border").click(function() {
+           $( ".bg-orange.p2-border").hide();
         });
     
     $("#gradient-circle").hover(function(){
