--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -49,7 +49,7 @@
 					<div class="p2-circle bg-orange"></div>
 					<div class="p2-circle bg-orange"></div>
 					<div class="p2-circle bg-orange"></div>
-					<div  class="p2-circle bg-blue"></div>
+					<div class="p2-circle bg-blue"></div>
 					<div class="p2-circle bg-blue"></div>
 					<div class="p2-circle bg-blue p2-border"></div>
 					<div class="p2-circle bg-blue p2-border"></div>
@@ -79,7 +79,7 @@
         $("#gradient-circle").hide();
     });
     $("#button").click(function(){
-         $(".bg-purple,.bg-blue,#orangeborder1,#orangeborder2,#gradient-circle").show();
+         $(".bg-purple,.bg-blue,.bg-orange.p2-border,#gradient-circle").show();
         
     }); 
     
