--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -73,8 +73,8 @@
         });
     $( ".bg-orange.p2-border").click(function() {
            $( ".bg-orange.p2-border").hide();
+            $(event.target).show();
         });
-    
     $("#gradient-circle").hover(function(){
         $("#gradient-circle").hide();
     });
